# wifi-speed-test-tool

./: ALIGNMENT.md  API.md  APPROVAL.md  CONSENSUS.md  DESIGN.md  FAQ.md  FINAL.md  README.md  RISK_REGISTER.md  TASK.md  TECHNICAL.md  USER_GUIDE.md  main.py  pyproject.toml  requirements.txt  run.bat  test_speed.py
config/: config.json
src/models/: data_models.py
src/services/: config_service.py
src/ui/: animations.py  channel_analysis_panel.py  main_window.py  recommend_panel.py  ui_styles.py
src/utils/: exception_handler.py  logger.py
