[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-speed-test"
version = "1.0.0"
description = "A comprehensive WiFi speed test and channel analysis tool"
authors = [
    {name = "WiFi Test Team"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyQt5>=5.15.0",
    "pywifi>=0.1.0",
    "matplotlib>=3.5.0",
    "requests>=2.28.0",
    "speedtest-cli>=2.1.0",
    "numpy>=1.21.0",
]

[project.scripts]
wifi-test = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui", "*.qrc", "*.json", "*.txt"]
